<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_execucao_treinamento"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_execucao_treinamento" />
        <item
            android:id="@+id/nav_conf_exercicio"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_conf_exercicio" />
        <item
            android:id="@+id/nav_conf_padrao_treinamento"
            android:icon="@drawable/ic_timer_black"
            android:title="@string/menu_conf_padrao_treinamento" />
        <item
            android:id="@+id/nav_conf_dispositivos"
            android:icon="@drawable/ic_phonelink_setup"
            android:title="@string/menu_conf_dispositivo" />
    </group>

</menu>
