<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="28dp"
            android:layout_height="53dp"
            android:layout_marginStart="16dp"
            android:drawableStart="@drawable/ic_bluetooth_on"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/ld_status_conexao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewStatusBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/title_not_connected"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <Switch
            android:id="@+id/switchStatusConexao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/lb_ativar_conexao"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ViewAnimator
            android:id="@+id/viewAnimator1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="55dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewIdentificacaoPadraoTreinamento"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:paddingLeft="5dp"
            android:textAlignment="viewStart"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStatusBluetooth" />


        <TextView
            android:id="@+id/title_dispositivos_configurados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="5dp"
            android:text="@string/lb_dispositivos_configurados"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewIdentificacaoPadraoTreinamento" />

        <ViewAnimator
            android:id="@+id/viewAnimator2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="228dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewIdentificacaoPadraoTreinamento" />

        <Button
            android:id="@+id/buttonAtivarAquecimento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawableRight="@drawable/ic_play_circle"
            android:text="@string/lb_ativar_aquecimento"
            android:textColor="@android:color/background_light"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_dispositivos_configurados" />

        <ProgressBar
            android:id="@+id/progressBarExecucaoTreinamento"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:max="100"
            android:progress="0"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_dispositivos_configurados" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewExecutarTreinamento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="16dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAtivarAquecimento" />


        <ProgressBar
            android:id="@+id/progressBarAtivaConexoes"
            style="?android:attr/progressBarStyle"
            android:layout_width="39dp"
            android:layout_height="38dp"
            android:layout_marginStart="50dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView15" />



    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>


